generate models, refactor ui, impl NER, remove from data cleaning Person and Locations

--- a/presentation/todo.txt
+++ b/presentation/todo.txt
@@ -25,3 +25,7 @@ Models
 
 
 https://medium.com/@limavallantin/why-is-removing-stop-words-not-always-a-good-idea-c8d35bd77214
+
+To be cleaned
+San Diego
+Humous and Dorito`s.... Oh yes ==> Why Humous is classify as JJ??
